# tom

crates/tom_syntax/: Cargo.toml
crates/tom_syntax/src/: ast.rs  lib.rs  syntax_error.rs  syntax_node.rs  validator.rs
crates/tom_syntax/src/ast/: extensions.rs  generated.rs  mod.rs
crates/tom_syntax/src/parser/: grammar.rs  lexer.rs  mod.rs  text_token_source.rs
crates/tom_syntax/src/symbol/: mod.rs
crates/tom_syntax/src/syntax_kind/: generated.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
xtask/src/codegen/: ast_src.rs  gen_symbols.rs  gen_syntax.rs
xtask/tests/: tidy.rs
