[package]
name = "tom_syntax"
version = "0.0.1"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/tom"
description = """
Yet another format-preserving TOML parser/manipulator.
"""

[dependencies]
# public
text_unit = "0.1.5"

# private

# TODO: remove this dep:?
lazy_static = "1"
toml_lexer = { path = "../../../toml-rs/crates/toml_lexer" }
uncover = "0.1"
drop_bomb = "0.1.3"
rowan = "0.10.0"

[dev-dependencies]
difference = "2"
